--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development",
     "start": "webpack --mode development --watch",
-    "tsc": "tsc --noEmmit"
+    "tsc": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
