--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "devDependencies": {
     "@babel/core": "7.11.4",
     "@babel/plugin-transform-react-jsx": "7.10.4",
-    "@babel/preset-env": "7.11.0",
     "@babel/preset-typescript": "7.10.4",
     "babel-loader": "8.1.0",
     "typescript": "4.0.2",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.12.11"
   }
 }
