--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mochapack --require test/setup.js --webpack-config webpack.config-test.js test/test.tsx",
     "build": "webpack --mode development",
-    "start": "webpack --mode development --watch",
+    "start": "webpack serve --mode development",
     "tsc": "tsc --noEmit"
   },
   "keywords": [],
@@ -16,11 +16,19 @@
     "@babel/core": "7.11.4",
     "@babel/plugin-transform-react-jsx": "7.10.4",
     "@babel/preset-typescript": "7.10.4",
+    "@webpack-cli/serve": "^1.2.1",
     "babel-loader": "8.1.0",
+    "chai": "4.2.0",
+    "chai-spies": "1.0.0",
+    "http-server": "^0.12.3",
+    "jsdom": "16.4.0",
+    "mocha": "^8.2.1",
+    "mochapack": "2.0.6",
     "typescript": "4.0.2",
-    "webpack": "4.44.1",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.0"
+    "webpack": "5.11.1",
+    "webpack-cli": "4.3.1",
+    "webpack-dev-server": "3.11.1",
+    "webpack-node-externals": "2.5.2"
   },
   "dependencies": {
     "@babel/preset-env": "^7.12.11"
