--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "7.11.4",
-    "@babel/plugin-transform-react-jsx": "7.10.4",
-    "@babel/preset-typescript": "7.10.4",
-    "@webpack-cli/serve": "^1.2.1",
-    "babel-loader": "8.1.0",
+    "@babel/core": "^7.12.16",
+    "@babel/plugin-transform-react-jsx": "^7.12.16",
+    "@babel/preset-typescript": "^7.12.16",
+    "@webpack-cli/serve": "^1.3.0",
+    "babel-loader": "^8.2.2",
     "chai": "4.2.0",
     "chai-spies": "1.0.0",
     "http-server": "^0.12.3",
     "jsdom": "16.4.0",
-    "mocha": "^8.2.1",
+    "mocha": "^8.3.0",
     "mochapack": "2.0.6",
     "typescript": "4.0.2",
-    "webpack": "4.44.2",
-    "webpack-cli": "4.3.1",
-    "webpack-dev-server": "3.11.1",
-    "webpack-node-externals": "2.5.2"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.12.11"
+    "@babel/preset-env": "^7.12.16"
   }
 }
