--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
     "sourceMap": true,
     "allowJs": false,
     "resolveJsonModule": true,
-    "baseUrl": "./"
-  }
-
+    "baseUrl": "./",
+  },
 }
